[package]
name = "huesound"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# anyhow = "1.0"
# clap = {version = "4.1", features = ["derive"]}
itertools = "0.10.5"
rodio = "0.16.0"
rtrb = "0.2"
rustfft = "6.1.0"

